2006-02-27  Stefan Kersten  <steve@k-hornz.de>

	* cairomm/surface.cc: fix an extra trailing parentheses in
	GlitzSurface::create()

2006-02-22  Danilo Piazzalunga  <danilopiazza@gmail.com>

	* examples/README: Write some basic information about each example

2006-02-22  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/reference/Makefile.am: add target for publishing the API reference
	to cairographics.org

2006-02-20  Danilo Piazzalunga  <danilopiazza@gmail.com>

	* Makefile.am: Include MAINTAINERS in distribution. Fixes Bug #5982

2006-02-17  Danilo Piazzalunga  <danilopiazza@gmail.com>

	* COPYING: Use the text from the Library GPL 2.0, which is the actual
	license of cairomm. Fixes Bug #5934

2006-02-17  Danilo Piazzalunga  <danilopiazza@gmail.com>

	* autogen.sh:
	* cairomm/cairomm.h:
	* cairomm/context.cc:
	* cairomm/context.h:
	* cairomm/enums.h:
	* cairomm/exception.cc:
	* cairomm/exception.h:
	* cairomm/fontface.cc:
	* cairomm/fontface.h:
	* cairomm/fontoptions.cc:
	* cairomm/fontoptions.h:
	* cairomm/path.cc:
	* cairomm/path.h:
	* cairomm/pattern.cc:
	* cairomm/pattern.h:
	* cairomm/private.cc:
	* cairomm/private.h:
	* cairomm/refptr.h:
	* cairomm/surface.cc:
	* cairomm/surface.h:
	* cairomm/win32_surface.cc:
	* cairomm/win32_surface.h:
	* cairomm/xlib_surface.cc:
	* cairomm/xlib_surface.h: Update FSF's postal address in GPL/LGPL
	comment headings.  Fixes Bug #5933

2006-02-17  Danilo Piazzalunga  <danilopiazza@gmail.com>

	* examples/*/.cvsignore: Bug #5927: added .cvsignore files to examples
	directories

2006-02-17  Danilo Piazzalunga  <danilopiazza@gmail.com>

	* AUTHORS:
	* INSTALL:
	* README:
	* cairomm/exception.cc:
	* cairomm/exception.h: Remove lingering references to libxml++

2006-02-17  Danilo Piazzalunga  <danilopiazza@gmail.com>

	* configure.in: Bug #5929: Output files in docs subdir only if
	--enable-docs is set.  This prevents configure from generating files which
	are not cleaned up when --disable-docs is used.