@@ -74,7 +74,7 @@ WARN_LOGFILE           = undocumented.txt
 INPUT                  = @top_srcdir@/cairomm introduction.h
 FILE_PATTERNS          = *.h
 RECURSIVE              = NO
-EXCLUDE                = 
+EXCLUDE                = @top_srcdir@/cairomm/private.h
 EXCLUDE_SYMLINKS       = NO
 EXCLUDE_PATTERNS       = 
 EXAMPLE_PATH           = 
